--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ body{
     margin-right: 80px;
     font-size: 22px;
 }
+#about{
+    margin-bottom: 260px;
+}
 #about h1{
     text-align: center;
     font-size: 70px;
@@ -144,4 +147,25 @@ body{
 }
 .word ul{
     margin-bottom: 70px;
+}
+#causes{
+    margin-bottom: 250px;
+}
+#causes h1{
+    font-size: 70px;
+    text-align: center;
+}
+.service{
+    display: flex;
+    margin-left: 16%;
+}
+.done{
+    margin-left: 20px;
+}
+.done a{
+    text-decoration: none;
+    background-color: #ff7675;
+    color: aliceblue;
+    padding: 10px 30px;
+    border-radius: 3%;
 }
