--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     border-radius: 5%;
     font-size: 30px;
 }
+/**********header end********/
 #donate{
     text-align: center;
 }
@@ -84,6 +85,7 @@ body{
     border-radius: 5%;
     font-size: 30px;
 }
+/**********donate end*********/
 #plan{
     margin-bottom: 200px;
 }
@@ -129,6 +131,7 @@ body{
     padding: 40px 20px;
     border-radius: 2%;
 }
+/*****************plan End************/
 .head{
     font-size: 35px;
 }
@@ -159,6 +162,7 @@ body{
 .word ul{
     margin-bottom: 70px;
 }
+/******************about end********************/
 #causes{
     margin-bottom: 250px;
 }
@@ -181,6 +185,7 @@ body{
     padding: 10px 30px;
     border-radius: 3%;
 }
+/***************causes end******************/
 #update{
     text-align: center;
     margin-bottom: 200PX;
@@ -218,6 +223,7 @@ input[type=email] {
     border-radius: 3%;
     font-size: 25PX;
   }
+  /******************update emd***********/
   FOOter{
     background-color: black;
     height: 200px;
@@ -234,3 +240,4 @@ input[type=email] {
     text-align: center;
     font-family: 'Lato', sans-serif;
   }
+  /*****************footer end***************/
